--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         <li><a href="index.html">Головна </a></li>
         <li>
-          <a href="" class="desktop-item">Одяг для танців <span><i class="fas fa-chevron-down"></i></span></a>
+          <a href="https://nkolesnikoff5.github.io/DanceNL_Site_Catalog_of_Closes/" class="desktop-item">Одяг для танців <span><i class="fas fa-chevron-down"></i></span></a>
           <input type="checkbox" id="showMega" />
           <label for="showMega" class="mobile-item">Одяг для танців <span><i class="fas fa-chevron-down"></i></span></label>
           <div class="mega-box">
