--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           </div>
           <li><a href="index.html">Головна</a></li>
           <li>
-            <a href="#" class="desktop__one">Одяг для танців <span><i class="fas fa-chevron-down"></i></span></a>
+            <a href="https://nkolesnikoff5.github.io/Catalog_of_closes_Dance__NL_Site-Pub/" class="desktop__one">Одяг для танців <span><i class="fas fa-chevron-down"></i></span></a>
             <input type="checkbox" id="showMega" />
             <label for="showMega" class="mobile-item">Одяг для танців <span><i class="fas fa-chevron-down"></i></span></label>
             <div class="mega-box">
@@ -63,7 +63,7 @@
           </li>
           
           <li>
-            <a href="#" class="desktop__one">Аксесуари <span><i class="fas fa-chevron-down"></i></span></a>
+            <a href="https://nkolesnikoff5.github.io/Catalog_of_closes_Dance__NL_Site-Pub/" class="desktop__one">Аксесуари <span><i class="fas fa-chevron-down"></i></span></a>
             <input type="checkbox" id="showMega" />
             <label for="showMega" class="mobile-item">Аксесуари <span><i class="fas fa-chevron-down"></i></span></label>
             <div class="mega-box">
@@ -94,7 +94,7 @@
         </li>
         
         <li>
-          <a href="#" class="desktop__one">Сумки <span><i class="fas fa-chevron-down"></i></span></a>
+          <a href="https://nkolesnikoff5.github.io/ShoppingCard_Dance__NL_Site/" class="desktop__one">Сумки <span><i class="fas fa-chevron-down"></i></span></a>
           <input type="checkbox" id="showMega" />
           <label for="showMega" class="mobile-item">Сумки <span><i class="fas fa-chevron-down"></i></span></label>
           <div class="mega-box">
@@ -117,13 +117,13 @@
           </div>
         </li>
         <li>
-          <a href="#" class="desktop__one">Оголошення</a>
+          <a href="https://nkolesnikoff5.github.io/Catalog_of_closes_Dance__NL_Site-Pub/" class="desktop__one">Оголошення</a>
         </li>
         <li>
-          <a href="" class="desktop__one">Про нас</a>
+          <a href="https://nkolesnikoff5.github.io/Catalog_of_closes_Dance__NL_Site-Pub/" class="desktop__one">Про нас</a>
         </li>
         <li>
-          <a href="#" class="desktop__one">Контакти</a>
+          <a href="https://nkolesnikoff5.github.io/Catalog_of_closes_Dance__NL_Site-Pub/" class="desktop__one">Контакти</a>
         </li>
         <!-- Navbar Icons -->
          <li class="icons">
