--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <div class="top">
             <label for="" class="btn close-btn"><i class="fas fa-times"></i></label>
           </div>
-          <li><a href="index.html">Головна</a></li>
+          <li><a href="https://nkolesnikoff5.github.io/Homepage_DanceNL_Site/">Головна</a></li>
           <li>
             <a href="https://nkolesnikoff5.github.io/Catalog_of_closes_Dance__NL_Site-Pub/" class="desktop__one">Одяг для танців <span><i class="fas fa-chevron-down"></i></span></a>
             <input type="checkbox" id="showMega" />
